# lanzou-client

./: .gitignore  .lintstagedrc.yaml  .oxfmtrc.json  .oxlintrc.json  .releaserc.mjs  README.md  components.d.ts  env.d.ts  index.html  package.json  tsconfig.json  tsconfig.node.json  typed-router.d.ts  vite.config.mts  words.txt
.github/ISSUE_TEMPLATE/: bug-install.yml  bug-runtime.yml  future-new.yml  future-support.yml
.github/workflows/: build.yaml  lint.yaml
lanzou-raw/: config.xml  index.html
lanzou-raw/error/: error.html
lanzou-raw/html/: center.html  centers.html  folder.html  folders.html  reg.html  regs.html  tixian.html  tixians.html
script/: set-version.mts  update-version.mts
src/: App.vue  AppSetup.vue  index.css  main.tsx  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: fs_scheme.rs  lib.rs  logger.rs  main.rs
src/api/: axios.ts  index.ts
src/api/auth/: login.ts
src/components/: UpdateChecker.vue
src/components/base/LzMarkdown/: LzMarkdown.vue
src/pages/: index.vue
src/utils/: axios.ts  date.ts
